Refactor and enhance webclient templates and styles.