@@ -1,301 +1,235 @@
 package com.ecoembes.webclient.controller;
 
-import com.ecoembes.webclient.model.Model;
 import com.ecoembes.webclient.proxy.IServiceProxy;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.ModelMap;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-/**
- * Web Client Controller - handles HTTP requests from the browser
- * and delegates business logic to the Service Proxy.
- */
 @Controller
+@RequestMapping("/web")
 public class WebClientController {
 
     private final IServiceProxy serviceProxy;
-    private final Model sessionModel;
 
-    public WebClientController(IServiceProxy serviceProxy, Model sessionModel) {
+    private String token; // Token de sesión del usuario logueado
+
+    @Autowired
+    public WebClientController(IServiceProxy serviceProxy) {
         this.serviceProxy = serviceProxy;
-        this.sessionModel = sessionModel;
     }
 
-
-
-    @GetMapping("/")
-    public String index() {
-        if (sessionModel.isAuthenticated()) {
-            return "redirect:/home";
-        }
-        return "login";
-    }
+    /* ===================== LOGIN ===================== */
 
     @GetMapping("/login")
-    public String loginPage() {
+    public String showLogin() {
         return "login";
     }
 
     @PostMapping("/login")
-    public String login(@RequestParam String email,
-                       @RequestParam String password,
-                       ModelMap model) {
+    public String doLogin(@RequestParam String email,
+                          @RequestParam String password,
+                          Model model) {
+
         try {
-            System.out.println("[CONTROLLER] Intentando logearse para: " + email);
-            String token = serviceProxy.login(email, password);
-            System.out.println("[CONTROLLER] Token recibido: " + token);
-
-            if (token == null || token.isEmpty()) {
-                System.err.println("[CONTROLLER] El token está vacío o es nulo!");
-                model.addAttribute("error", "Email o contraseña inválidos");
-                return "login";
-            }
-
-            sessionModel.setToken(token);
-            sessionModel.setCurrentURL("/home");
-            System.out.println("[CONTROLLER] Logeado correctamente, redirigiendo a /home");
-            return "redirect:/home";
+            token = serviceProxy.login(email, password);
+            return "redirect:/web/home";
         } catch (Exception e) {
-            System.err.println("[CONTROLLER] Fallo en el login con excepcion: " + e.getMessage());
-            e.printStackTrace();
-            model.addAttribute("error", "Email o contraseña inválidos: " + e.getMessage());
+            model.addAttribute("error", "Credenciales incorrectas");
             return "login";
         }
     }
 
     @GetMapping("/logout")
     public String logout() {
-        try {
-            if (sessionModel.isAuthenticated()) {
-                serviceProxy.logout(sessionModel.getToken());
-            }
-        } catch (Exception e) {
-            // Log error but continue with logout
+        if (token != null) {
+            serviceProxy.logout(token);
+            token = null;
         }
-        sessionModel.setToken(null);
-        sessionModel.setCurrentURL(null);
-        return "redirect:/login";
+        return "redirect:/web/login";
     }
 
+    /* ===================== MENÚ ===================== */
 
     @GetMapping("/home")
-    public String home(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
+    public String showHome() {
+        if (token == null) {
+            return "redirect:/web/login";
         }
-        sessionModel.setCurrentURL("/home");
         return "index";
     }
 
-
+    /* ===================== CONTENEDORES ===================== */
 
     @GetMapping("/dumpsters/create")
-    public String createDumpsterPage(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
+    public String showCreateDumpster() {
+        if (token == null) {
+            return "redirect:/web/login";
         }
-        sessionModel.setCurrentURL("/dumpsters/create");
         return "dumpsters/create";
     }
 
     @PostMapping("/dumpsters/create")
     public String createDumpster(@RequestParam String location,
                                  @RequestParam Double initialCapacity,
-                                 ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
+                                 Model model) {
         try {
-            Map<String, Object> dumpsterData = new HashMap<>();
+            Map<String, Object> dumpsterData = new java.util.HashMap<>();
             dumpsterData.put("location", location);
             dumpsterData.put("initialCapacity", initialCapacity);
-
-            Map<String, Object> result = serviceProxy.createDumpster(sessionModel.getToken(), dumpsterData);
-            model.addAttribute("success", "Dumpster created successfully!");
-            model.addAttribute("dumpster", result);
+            
+            Map<String, Object> result = serviceProxy.createDumpster(token, dumpsterData);
+            model.addAttribute("contenedor", result);
             return "dumpsters/create-success";
         } catch (Exception e) {
-            model.addAttribute("error", "Fallo al crear contenedores: " + e.getMessage());
+            model.addAttribute("error", "Error al crear contenedor: " + e.getMessage());
             return "dumpsters/create";
         }
     }
 
-    @GetMapping("/dumpsters/query")
-    public String queryDumpstersPage(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-        sessionModel.setCurrentURL("/dumpsters/query");
-        return "dumpsters/query";
-    }
-
-    @PostMapping("/dumpsters/query")
-    public String queryDumpsters(@RequestParam String startDate,
-                                 @RequestParam String endDate,
-                                 ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
-        try {
-            LocalDate start = LocalDate.parse(startDate);
-            LocalDate end = LocalDate.parse(endDate);
-            List<Map<String, Object>> usage = serviceProxy.queryDumpsterUsage(sessionModel.getToken(), start, end);
-            model.addAttribute("usageData", usage);
-            model.addAttribute("startDate", startDate);
-            model.addAttribute("endDate", endDate);
-            return "dumpsters/query-results";
-        } catch (Exception e) {
-            model.addAttribute("error", "Fallo al obtener contenedores: " + e.getMessage());
-            return "dumpsters/query";
-        }
-    }
-
     @GetMapping("/dumpsters/status")
-    public String dumpsterStatusPage(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
+    public String showDumpsterStatus() {
+        if (token == null) {
+            return "redirect:/web/login";
         }
-        sessionModel.setCurrentURL("/dumpsters/status");
         return "dumpsters/status";
     }
 
     @PostMapping("/dumpsters/status")
-    public String dumpsterStatus(@RequestParam String postalCode,
-                                 @RequestParam String date,
-                                 ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
+    public String getDumpsterStatus(@RequestParam String postalCode,
+                                    @RequestParam String date,
+                                    Model model) {
         try {
-            LocalDate queryDate = LocalDate.parse(date);
-            List<Map<String, Object>> status = serviceProxy.getDumpsterStatus(
-                    sessionModel.getToken(), postalCode, queryDate);
-            model.addAttribute("statusData", status);
-            model.addAttribute("postalCode", postalCode);
-            model.addAttribute("date", date);
+            LocalDate localDate = LocalDate.parse(date);
+            List<Map<String, Object>> status =
+                    serviceProxy.getDumpsterStatus(token, postalCode, localDate);
+
+            model.addAttribute("contenedores", status);
+            model.addAttribute("codigoPostal", postalCode);
+            model.addAttribute("fecha", date);
             return "dumpsters/status-results";
         } catch (Exception e) {
-            model.addAttribute("error", "Fallo al obtener estado de contenedores: " + e.getMessage());
+            model.addAttribute("error", "Error al obtener estado: " + e.getMessage());
             return "dumpsters/status";
         }
     }
 
-    // ========== Plants ==========
+    @GetMapping("/dumpsters/query")
+    public String showDumpsterQuery() {
+        if (token == null) {
+            return "redirect:/web/login";
+        }
+        return "dumpsters/query";
+    }
+
+    @PostMapping("/dumpsters/query")
+    public String queryDumpsterUsage(@RequestParam String startDate,
+                                     @RequestParam String endDate,
+                                     Model model) {
+        try {
+            LocalDate start = LocalDate.parse(startDate);
+            LocalDate end = LocalDate.parse(endDate);
+            List<Map<String, Object>> usage =
+                    serviceProxy.queryDumpsterUsage(token, start, end);
+
+            model.addAttribute("usoContenedores", usage);
+            model.addAttribute("fechaInicio", startDate);
+            model.addAttribute("fechaFin", endDate);
+            return "dumpsters/query-results";
+        } catch (Exception e) {
+            model.addAttribute("error", "Error al consultar uso: " + e.getMessage());
+            return "dumpsters/query";
+        }
+    }
+
+    /* ===================== PLANTAS ===================== */
 
     @GetMapping("/plants")
-    public String plantsPage(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
+    public String getPlants(Model model) {
         try {
-            List<Map<String, Object>> plants = serviceProxy.getAllPlants(sessionModel.getToken());
-            model.addAttribute("plants", plants);
-            sessionModel.setCurrentURL("/plants");
+            if (token == null) {
+                return "redirect:/web/login";
+            }
+            List<Map<String, Object>> plants = serviceProxy.getAllPlants(token);
+            model.addAttribute("plantas", plants);
             return "plants/list";
         } catch (Exception e) {
-            model.addAttribute("error", "Fallo al crear plantas: " + e.getMessage());
+            model.addAttribute("error", "Error al obtener plantas: " + e.getMessage());
             return "plants/list";
         }
     }
 
     @GetMapping("/plants/capacity")
-    public String plantCapacityPage(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
+    public String showPlantCapacity(Model model) {
+        if (token == null) {
+            return "redirect:/web/login";
         }
-
-        try {
-            List<Map<String, Object>> plants = serviceProxy.getAllPlants(sessionModel.getToken());
-            model.addAttribute("plants", plants);
-            sessionModel.setCurrentURL("/plants/capacity");
-            return "plants/capacity";
-        } catch (Exception e) {
-            model.addAttribute("error", "Fallo al crear plantas: " + e.getMessage());
-            return "plants/capacity";
-        }
+        return "plants/capacity";
     }
 
     @PostMapping("/plants/capacity")
-    public String plantCapacity(@RequestParam String date,
-                                @RequestParam(required = false) String plantId,
-                                ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
+    public String getPlantCapacity(@RequestParam(required = false) String plantId,
+                                   @RequestParam String date,
+                                   Model model) {
         try {
-            LocalDate queryDate = LocalDate.parse(date);
-            List<Map<String, Object>> capacities = serviceProxy.getPlantCapacity(
-                    sessionModel.getToken(), queryDate, plantId);
-            model.addAttribute("capacities", capacities);
-            model.addAttribute("date", date);
-            model.addAttribute("plantId", plantId);
+            LocalDate localDate = LocalDate.parse(date);
+            List<Map<String, Object>> capacity =
+                    serviceProxy.getPlantCapacity(token, localDate, plantId);
+
+            model.addAttribute("capacidades", capacity);
+            model.addAttribute("fecha", date);
+            model.addAttribute("plantaId", plantId);
             return "plants/capacity-results";
         } catch (Exception e) {
-            model.addAttribute("error", "Fallo al obtener capacidad de las plantas: " + e.getMessage());
+            model.addAttribute("error", "Error al obtener capacidad: " + e.getMessage());
             return "plants/capacity";
         }
     }
 
+    /* ===================== ASIGNACIÓN ===================== */
 
     @GetMapping("/assignments/create")
-    public String createAssignmentPage(ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
+    public String showCreateAssignment(Model model) {
         try {
-            List<Map<String, Object>> plants = serviceProxy.getAllPlants(sessionModel.getToken());
+            if (token == null) {
+                return "redirect:/web/login";
+            }
+            List<Map<String, Object>> plants = serviceProxy.getAllPlants(token);
             model.addAttribute("plants", plants);
-            sessionModel.setCurrentURL("/assignments/create");
             return "assignments/create";
         } catch (Exception e) {
-            model.addAttribute("error", "Fallo al cargar todas las plantas: " + e.getMessage());
+            model.addAttribute("error", "Error al cargar plantas: " + e.getMessage());
             return "assignments/create";
         }
     }
 
     @PostMapping("/assignments/create")
-    public String createAssignment(@RequestParam String plantId,
-                                   @RequestParam String dumpsterIds,
-                                   @RequestParam String date,
-                                   ModelMap model) {
-        if (!sessionModel.isAuthenticated()) {
-            return "redirect:/login";
-        }
-
+    public String assignDumpsters(@RequestParam String plantId,
+                                  @RequestParam String dumpsterIds,
+                                  Model model) {
         try {
-            // Dividir y recortar ID de contenedores
-            List<String> dumpsterIdList = List.of(dumpsterIds.split(","))
-                    .stream()
+            // Convertir la cadena de IDs separados por comas en una lista
+            List<String> idList = java.util.Arrays.stream(dumpsterIds.split(","))
                     .map(String::trim)
-                    .toList();
+                    .filter(s -> !s.isEmpty())
+                    .collect(java.util.stream.Collectors.toList());
 
-            Map<String, Object> assignmentData = new HashMap<>();
-            assignmentData.put("plantID", plantId);  
-            assignmentData.put("dumpsterIDs", dumpsterIdList); 
-            assignmentData.put("date", date);
+            Map<String, Object> assignmentData = new java.util.HashMap<>();
+            assignmentData.put("plantID", plantId);
+            assignmentData.put("dumpsterIDs", idList);
 
-            Map<String, Object> result = serviceProxy.assignDumpstersToPlant(
-                    sessionModel.getToken(), assignmentData);
-            model.addAttribute("sucess", "Tarea creada correctamente!");
-            model.addAttribute("assignment", result);
+            Map<String, Object> result = serviceProxy.assignDumpstersToPlant(token, assignmentData);
+            model.addAttribute("resultado", result);
             return "assignments/create-success";
         } catch (Exception e) {
-            model.addAttribute("error", "Fallo al crear tarea: " + e.getMessage());
-            List<Map<String, Object>> plants = serviceProxy.getAllPlants(sessionModel.getToken());
+            model.addAttribute("error", "Error al asignar contenedores: " + e.getMessage());
+            List<Map<String, Object>> plants = serviceProxy.getAllPlants(token);
             model.addAttribute("plants", plants);
             return "assignments/create";
         }
     }
 }
-
